# SpaceTitanic

./: .gitignore  README.md  pyproject.toml  submission.csv
notebooks/: 01_eda.ipynb  02_model.ipynb
src/: data.py  features.py  model_catboost.py  model_gradientboost.py  model_viz.py  settings.py
